findbugs: Clean up Dubious Method warnings
Findbugs' Dubious Method Used warning are about calling methods that
would work, but perform the required task inefficiently (e.g., calling
new Boolean(true) instead of Boolean.valueOf(true), or even
Boolean.TRUE).

This patch removes the all-out filter for this category of warnings.
Issues previously suppressed by this filter are either fixed where
possible, or replaced with a more fine-grained filter where not
possible.

A notable case where these issues cannot be fixed in is GWT's
auto-generated hashCode() methods for classes containing a boolean
member.

Change-Id: I6b904dfea1991b6ce5bb7c5a534127ee10e56a24
Signed-off-by: Allon Mureinik <amureini@redhat.com>